Added runMacOS task in gradle