@@ -38,6 +38,24 @@ task run(dependsOn: jar, type: JavaExec, description: "Runs the desktop project 
     ignoreExitValue = true
 }
 
+task runMacOS(dependsOn: jar, type: JavaExec, description: "Runs the desktop project in macOS systems") {
+    main = project.mainClassName
+    systemProperties['properties.file'] = ''
+    systemProperties['assets.location'] = '../android/assets/'
+    
+    // Parallel GC
+    //jvmArgs = ['-Xms2g', '-Xmx4g', '-XX:+UseParNewGC']
+    // CMS GC
+    jvmArgs = ['-server', '-Xms2g', '-Xmx3g', '-XstartOnFirstThread', '-Djava.awt.headless=true', '-XX:+UseConcMarkSweepGC', '-XX:+UseParNewGC', '-XX:MaxGCPauseMillis=5', '-XX:+CMSParallelRemarkEnabled', '-XX:CMSInitiatingOccupancyFraction=60', '-XX:MaxTenuringThreshold=4', '-XX:MaxNewSize=384m', '-XX:NewSize=384m', '-XX:SurvivorRatio=12']
+    // G1 GC
+    //jvmArgs = ['-Xms2g', '-Xmx4g', '-XX:+UseG1GC']
+    classpath = sourceSets.main.runtimeClasspath
+    classpath += files(project.assetsDir)
+    standardInput = System.in
+    workingDir = project.workDir
+    ignoreExitValue = true
+}
+
 task runCatalogFilter(dependsOn: jar, type: JavaExec, description: "Runs the catalog filter application to generate day catalogs for WebGL") {
     main = 'gaia.cu9.ari.gaiaorbit.data.GaiaCatalogFilter'
     classpath = sourceSets.main.runtimeClasspath
